@@ -256,6 +256,9 @@ BUG FIXES
     o   qbinom() was returning NaN for prob = 0 or 1 or size = 0 even
 	though the result is well-defined.  (In part, PR#5900.)
 
+    o   par(mfg)[2] was being interpreted as relative to par(mfg)[3].
+	(PR#6045)
+
 
 
 
